# integritee-worker

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.Dockerfile
.github/workflows/: rust.yml
app-libs/sgx-runtime/: Cargo.toml
app-libs/sgx-runtime/src/: lib.rs
app-libs/stf/: Cargo.toml
app-libs/stf/src/: getter.rs  helpers.rs  lib.rs  stf_sgx.rs  trusted_call.rs
cli/: Cargo.toml  demo_interstellar.sh
cli/src/: commands.rs  lib.rs  main.rs  trusted_command_utils.rs  trusted_commands.rs  trusted_operation.rs
cli/src/base_cli/: mod.rs
cli/src/base_cli/commands/: balance.rs  faucet.rs  listen.rs  shield_funds.rs  transfer.rs
cli/src/benchmark/: mod.rs
cli/src/trusted_base_cli/: mod.rs
cli/src/trusted_base_cli/commands/: balance.rs  interstellar.rs  mod.rs  set_balance.rs  transfer.rs  unshield_funds.rs
core-primitives/block-import-queue/: Cargo.toml
core-primitives/node-api/api-client-types/: Cargo.toml
core-primitives/nonce-cache/: Cargo.toml
core-primitives/settings/src/: lib.rs
core-primitives/substrate-sgx/sp-io/src/: lib.rs
core-primitives/types/: Cargo.toml
enclave-runtime/: Cargo.toml  Makefile
enclave-runtime/src/: lib.rs  top_pool_execution.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: lib.rs
service/: Cargo.toml
sidechain/consensus/aura/src/: lib.rs
sidechain/consensus/slots/src/: lib.rs
sidechain/storage/: Cargo.toml
