[package]
name = "itp-api-client-types"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# integritee-node
my-node-runtime = { package = "integritee-node-runtime", optional = true, git = "https://github.com/Interstellar-Network/integritee-node.git", rev = "b7bb339445dc8d69e6920fa7d88e4548e8bebb7c" }

# scs
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.39" }

# substrate
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

# local
itp-types = { default-features = false, path = "../../types" }


[features]
default = ["std"]
std = [
    "itp-types/std",
    "substrate-api-client/std",
    "substrate-api-client/ws-client",
    "sp-core/std",
    "sp-runtime/std",
    "my-node-runtime",
]
